--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -18,8 +18,10 @@
 </head>
 <body>
     <h1>Добро пожаловать на мой сайт!</h1>
-    <p>мои соцсети:
-           telegram: caxaPOK_387</p>
+    <p>
+        мои соцсети:
+        telegram: caxaPOK_387
+    </p>
     <iframe width="110" height="200" src="https://www.myinstants.com/instant/anime-wow/embed/" frameborder="0" scrolling="no"></iframe>index.html
 </body>
 </html>
